tests/ui/empty/empty-linkname.rs
#[link(name = "")] //~ ERROR: link name must not be empty
extern "C" {}

fn main() {}

// ferrocene-annotations: fls_o0f9ae22ug1x
// Attribute link
